--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
    <artifactId>xmlbeans</artifactId>
    <version>2.6.0</version>
 </dependency>
+
+<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.12.0</version>
+    </dependency>
      
   
   
@@ -72,6 +78,18 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            
+            
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.12.4</version>
+               <configuration>
+                  <suiteXmlFiles>
+                     <suiteXmlFile>testng.xml</suiteXmlFile>
+                  </suiteXmlFiles>
+               </configuration>
             </plugin>
         
         </plugins> 
