--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,34 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.12.0</version>
     </dependency>
-     
-  
-  
+    
+    
+    <dependency>
+		    <groupId>com.aventstack</groupId>
+		    <artifactId>extentreports</artifactId>
+		    <version>4.0.9</version>
+		</dependency>
+    
+   	<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports-cucumber4-adapter</artifactId>
+			<version>1.0.7</version>
+	</dependency>
+
+
+	<dependency>
+			 <groupId>org.freemarker</groupId>
+			 <artifactId>freemarker</artifactId>
+			 <version>2.3.28</version>
+	</dependency>
+	
+	         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
+
   </dependencies>
   
      <build>
